# QUUX

./: .env  .gitignore  Cargo.toml  README.md  aims.md  build.cmd  build.sh  decisions.md  expansion copy.rs  expansion-client.rs  expansion-server.rs  expansion.rs  init.ts  log  magic.rs  package.json  postcss.config.js  quux.d.ts  quux.js  quux.ts  quux.wasm  qwik.d.ts  qwik.ts  tailwind.config.js  wasm.sh
.devcontainer/: devcontainer.json
element/: Cargo.toml
element/src/: lib.rs
html/: Cargo.toml
html/src/: lib.rs  log.rs  lolz.rs  view.rs
html/src/view/: generate.rs  parse.rs
html/src/view/generate/: client.rs  server.rs
html/src/view/generate/server/: attributes.rs  component.rs  element.rs
html/src/view/parse/: element.rs  test.rs
html/src/view/parse/element/: attribute.rs  children.rs
macros/: Cargo.toml
macros/src/: lib.rs
quux/: Cargo.toml
quux-macros/: Cargo.toml
quux-macros/src/: init_components.rs  lib.rs  routes.rs  view.rs
quux-macros/src/view/: generate.rs  parse.rs
quux-macros/src/view/generate/: client.rs  declarations.rs  server.rs
quux-macros/src/view/generate/client/: for_loop.rs
quux-macros/src/view/generate/server/: attributes.rs  component.rs  element.rs  for_loop.rs  if_expr.rs  match_expr.rs
quux-macros/src/view/parse/: component.rs  element.rs  html_ident.rs
quux-macros/src/view/parse/element/: attribute.rs  attributes.rs  children.rs
quux-macros/src/view/parse/element/children/: for_loop.rs  if_expr.rs  match_expr.rs
quux-server/: Cargo.toml  README.md
quux-server/src/: handler.rs  lib.rs  matching.rs  server.rs
quux-server/src/handler/: and_then.rs  function.rs  map.rs  map_err.rs  or.rs  path_segment.rs  server.rs  then.rs
quux-server/src/matching/: path.rs
quux-server/src/server/: matcher.rs  path.rs
quux/src/: component.rs  context.rs  dom.rs  errors.rs  initialisation_script.rs  lib.rs  quux_initialise.rs  render.rs  store.rs  stores.rs  tree.rs  view.rs
quux/src/store/: list.rs
quux/src/tree/: attributes.rs  children.rs  component.rs  components.rs  element.rs  event.rs  item.rs  items.rs
quux/src/tree/element/: html.rs  reactivity.rs
quux/src/tree/element/reactivity/: class.rs  event.rs  many.rs
quux/src/tree/item/: branch.rs  dom_representation.rs  empty.rs  many.rs  pair.rs  raw_html.rs  self_closing.rs  text.rs
quux/src/view/: output.rs  serialized_components.rs
quuxlet/: Cargo.toml  TODO.md  init.ts  package.json  tailwind.config.js
quuxlet/src/: data.rs  lib.rs  main old.rs  main.rs  pages.rs  style.css
quuxlet/src/components/: flashcards.rs
quuxlet/src/components/flashcards/: confidence_rating.rs  flashcard.rs
quuxlet/src/database/: data.db  schema.hcl
quuxlet/src/pages/: create.rs  discover.rs  error.rs  index.rs  set.rs
quuxlet/src/pages/create/: post_data.rs  term_card.rs
quuxlet/src/pages/set/: flashcard.rs  rating.rs  stack.rs
shared/: Cargo.toml
shared/src/: dom.rs  errors.rs  init.rs  lib.rs  stores.rs
shared/src/init/: client.rs  server.rs
src/: components.rs  expansion.rs  lib.rs  main.rs  pages.rs  stores.rs  style.css  tests.rs
src/components/: flashcard.rs  flashcards.rs  set.rs
src/components/flashcard/: confidence_rating.rs
src/components/flashcards/: confidence_rating.rs  flashcard.rs
src/database/: data.db
src/pages/: create.rs  error.rs  index.rs  not_found.rs  server_error.rs  set.rs
tag-parser/: Cargo.toml  output.txt
tag-parser/src/: input.txt  main.rs
view-legacy/: parse.rs
view-legacy/generate/client/: for_loop.rs
view-legacy/generate/server/: component.rs  element.rs  for_loop.rs
view-legacy/parse/: component.rs  html_ident.rs  item.rs
view-legacy/parse/element/: children.rs
view-legacy/parse/element/children/: reactive_store.rs
