[package]
name = "quuxlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quux = { path = "./quux" }
quux-macros = { path = "./quux-macros" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { workspace = true }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4", features = ["fs"] }
mime = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
postcard = { workspace = true }
console_error_panic_hook = "0.1"
once_cell = "1.16"

[workspace.dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
postcard = { version = "1.0", features = ["use-std"] }
lazy_static = "1.4"
base64 = "0.20"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "DomTokenList"] }

[workspace]
members = [
    "quux-macros",
    "quux"
]
