[workspace.dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
postcard = { version = "1.0", features = ["use-std"] }
lazy_static = "1.4"
base64 = "0.20"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "DomTokenList", "HtmlCollection"] }

[workspace]
members = [
    "quux-macros",
    "quux",
    "quuxlet"
]
