[workspace.dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
postcard = { version = "1.0", features = ["use-std"] }
base64 = "0.20"
web-sys = { version = "0.3", features = [
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Window",
	"DomTokenList",
	"HtmlCollection",
	"Text",
	"Range",
	"SupportedType",
	"DocumentFragment",
	"Comment",
] }

[workspace]
members = ["quux-macros", "quux", "quuxlet", "quux-server"]
