[package]
name = "quux"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
cfg-if = "1.0"
quux-macros = { path = "../quux-macros/" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
uuid = { version = "1.2", features = ["v4"] }
lazy_static = { workspace = true }
warp = { version = "0.3", optional = true} 

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true }
console_error_panic_hook = "0.1"

[features]
warp = ["dep:warp"]
