[package]
name = "quux"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
cfg-if = "1.0"
quux-macros = { path = "../quux-macros/" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
warp = { version = "0.3", optional = true}
hyper = { version = "0.14", features = ["full"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[features]
warp = ["dep:warp"]
