[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
uuid = { version = "1.2", features = ["v4"] }
lazy_static = { workspace = true }
